# personal-website

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: backend-migrations.yml  backend.yml  frontend.yml
.sqlx/: query-50bb35cb189ebf0a00a4f771f79526e27b62a62b5876a313785752e811191b19.json
backend/: .gitignore  Cargo.toml  plan.md  readme.md  rustfmt.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240620_064351_use_correct_chapter_type.rs  m20240620_074048_make_fields_non_opt.rs  m20240705_232421_nonopt_id.rs  m20241227_014425_provider.rs  m20241227_054323_fix_status.rs  m20241227_065306_rename_providers.rs  m20241227_224507_remove_optionals.rs  main.rs  novels.rs
backend/src/: chapter.rs  cli.rs  data_ingestion.rs  db.rs  image_to_tetris.rs  import_csv.rs  main.rs  novel_entry.rs  scraper.rs  scripts.rs  stats.rs
backend/src/data_ingestion/: browser.rs  csv.rs  novelupdates.rs  royalroad.rs
backend/src/entity/: mod.rs  novels.rs  prelude.rs
backend/src/migration/: Cargo.toml
backend/src/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240620_072646_use_vec_for_tags.rs  m20240620_074048_make_fields_non_opt.rs  m20240705_224756_addID.rs  m20240705_224756_add_id.rs  m20240705_232421_nonopt_id.rs  m20241216_050534_create_start_stop_date_cols.rs  novels.rs
backend/test_data/: Gimai Seikatsu - Novel Updates.html
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  readme.md  tailwind.config.ts  tsconfig.json
frontend/app/: app-nav-bar.tsx  globals.css  icon-link.tsx  layout.tsx  nav-bar.tsx  not-found.tsx  page.tsx  previews.tsx  projects.tsx  skills.tsx  technologies.ts  theme-toggle.tsx
frontend/app/about-me/: about-me-local.css  about-me.css  articleContent.module.css  page.tsx  posts.ts
frontend/app/about-me/[id]/: local.css  page.tsx
frontend/app/about-me/projects/: page.tsx  projectImage.module.css
frontend/app/coin-flip/: coin.css  page.tsx
frontend/app/image-to-tetris/: page.tsx
frontend/app/novels/: client-components.tsx  components.tsx  data-table.tsx  input-cell.tsx  local.css  novel-types.tsx  novel_types.tsx  page.tsx  server-components.tsx
frontend/app/novels/novels-list/: client-components.tsx  (+18 more)
frontend/app/types/: novel_types.tsx
frontend/components/derived/: Bordered.tsx  IconLink.tsx  Loading.module.css  Loading.tsx  Nav.tsx  PageHeader.tsx  ThemeToggle.tsx
frontend/components/ui/: alert-dialog.tsx  button.tsx  data-table.tsx  dropdown-menu.tsx  input-cell.tsx  input.tsx  navigation-menu.tsx
frontend/lib/: fetch_backend.ts
frontend/pages/api/: backend.tsx  create_novel.tsx  delete_novel.tsx  novels.tsx  novels_stats.tsx  update_novel.tsx
frontend/posts/: education.md  experience.md  hobbies.md  index.md  projects.md
frontend/types/: next-auth.d.ts
frontend/utils/: fetch_backend.ts
migration/src/: m20220101_000001_create_table.rs
src/: db.rs  import_csv.rs  main.rs  novel_entry.rs
src/entity/: mod.rs  novels.rs
src/migration/src/: lib.rs  m20240620_064351_use_correct_chapter_type.rs  novels.rs
(+7 files in other folders)
