[package]
name = "webnovel-list"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = "0.4.38"
csv = "1.3"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio"]}
strum = { version = "0.26.2", features = ["derive"] }
tokio = {verion = "1.38.0", features = ["full"]}
