[package]
name = "webnovel-list"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
chrono = "0.4.38"
csv = "1.3"
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
sqlx-cli = "0.7.4"
strum = { version = "0.26.2", features = ["derive"] }
tokio = "1.38.0"
