[package]
name = "webnovel-list"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = {version = "1.13.0", features = ["attributes"]}
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3"
dotenv = "0.15.0"
itertools = "0.13.0"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "debug-print", "postgres-array"] }
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
sqlx-cli = "0.7.4"
strum = { version = "0.26.3", features = ["derive"] }
tokio = "1.40.0"
