[package]
name = "webnovel-list"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-std = {version = "1.13.0", features = ["attributes"]}
axum = { version = "0.7.5", features = ["macros", "multipart"] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3"
dotenv = "0.15.0"
headless_chrome = { version = "1.0.15"}
html-escape = "0.2.13"
itertools = "0.13.0"
rand = "0.8.5"
scraper = "0.22.0"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-json", "debug-print", "postgres-array"] }
serde = "1.0.210"
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "process"] }
unicode-normalization = "0.1.24"
